samples/_failures_safe/1761199036_8c1179_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cc5f897.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_1cc5f897.c:181:20: error: missing terminating " character
  181 |             printf("Vertex
      |                    ^~~~~~~
./samples/SAFE/__tmp_1cc5f897.c:181:13: error: expected expression at end of input
  181 |             printf("Vertex
      |             ^~~~~~
./samples/SAFE/__tmp_1cc5f897.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cc5f897.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cc5f897.c:181:13: error: expected declaration or statement at end of input
